SVN $Id$
SVN $URL$
===============================================================================
Tag Creator: mlevy
Developers:  mlevy
Tag Date:    02 July 2014
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20140702
Tag Summary: Add lcvmix option (currently just calls cvmix_coeffs_kpp; no
             other diffusivities are computed in CVMix and the HBLT is still
             computed by POP). Note that this requires a the Machines_140702
             Machines/ tag to compile!

             CVMix is now an external that is pulled down by POP; using the
             v0.4-prebeta tag for now.

Files Modified:
 M      .
M       source/vmix_kpp.F90
M       source/vertical_mix.F90
M       bld/pop2.buildexe.csh
M       bld/namelist_files/namelist_definition_pop2.xml
A       SVN_EXTERNAL_DIRECTORIES
M       ChangeLog
===============================================================================
Tag Creator: jedwards
Developers:  jedwards
Tag Date:    25 June 2014
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20140625
Tag Summary: port to nag compiler

Files Modified:
M            source/ecosys_mod.F90
M            source/ecosys_parms.F90
M             mpi/gather_scatter.F90
===============================================================================
Tag Creator: mlevy
Developers:  mlevy, klindsay
Tag Date:    14 May 2014
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20140514
Tag Summary: OMP loop in ecosys_mod missing some private variable declarations

Files Modified:
M       source/ecosys_mod.F90
===============================================================================
Tag Creator: mlevy
Developers:  mlevy, klindsay
Tag Date:    7 May 2014
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20140507
Tag Summary: "if (b4b_flag)" was being used rather than "if (.not. b4b_flag)"
             in 3 places leading to the wrong global reduction being used

Files Modified:
M       mpi/global_reductions.F90
===============================================================================